[gd_scene load_steps=22 format=3 uid="uid://b65prfmldsp42"]

[ext_resource type="Script" path="res://Level/World.gd" id="1_pbmss"]
[ext_resource type="Texture2D" uid="uid://d4jbvykigcvas" path="res://Assets/Witchcraft_spr_sheets_V1_0.png" id="2_ogbjf"]
[ext_resource type="PackedScene" uid="uid://cx5lmcuug6jkj" path="res://Player/Player.tscn" id="3_40nm5"]
[ext_resource type="PackedScene" uid="uid://bqc4hacl7xvgk" path="res://Objects/Packages.tscn" id="3_u58kk"]
[ext_resource type="PackedScene" uid="uid://vag4ljtmbkve" path="res://Witches/WitchBlue.tscn" id="4_csmei"]
[ext_resource type="Texture2D" uid="uid://byq4f7kpgprl6" path="res://Assets/ProgressBar/TimeBar.png" id="4_e0yec"]
[ext_resource type="AudioStream" uid="uid://bs8ao0kn8tljg" path="res://Assets/SFX/Countdown.mp3" id="5_58ha1"]
[ext_resource type="Texture2D" uid="uid://c52tvby1uavkp" path="res://Assets/ProgressBar/TimeBarProgress.png" id="5_cuadt"]
[ext_resource type="AudioStream" uid="uid://drv1mun1iw4gi" path="res://Assets/SFX/GameOver.mp3" id="6_3gckg"]
[ext_resource type="PackedScene" uid="uid://be5q7b7vfc71s" path="res://Witches/WitchGreen.tscn" id="6_40uul"]
[ext_resource type="PackedScene" uid="uid://b2xq1j3u7ysmt" path="res://Witches/WitchOrange.tscn" id="7_msddo"]
[ext_resource type="PackedScene" uid="uid://bqwy7cq5aydok" path="res://Witches/WitchYellow.tscn" id="8_qykli"]
[ext_resource type="Shader" path="res://Level/TimedBar.gdshader" id="10_pvjv4"]
[ext_resource type="FontFile" uid="uid://c1o7swtx5t8bx" path="res://Assets/Fonts/BoldPixels1.4.ttf" id="11_s52vh"]
[ext_resource type="PackedScene" uid="uid://ifyifunt7tip" path="res://UI/Button.tscn" id="15_1d10h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qn2al"]
texture = ExtResource("2_ogbjf")
texture_region_size = Vector2i(24, 24)
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
16:5/0 = 0
16:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:5/0/physics_layer_0/angular_velocity = 0.0
16:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSet" id="TileSet_4fgek"]
tile_size = Vector2i(24, 24)
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_qn2al")

[sub_resource type="Animation" id="Animation_bxr7w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in 3"]
}

[sub_resource type="Animation" id="Animation_pwudx"]
resource_name = "startCountdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/CenterContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in 3", "Start in 2", "Start in 1"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ec0ee"]
_data = {
"RESET": SubResource("Animation_bxr7w"),
"startCountdown": SubResource("Animation_pwudx")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ku3c5"]
shader = ExtResource("10_pvjv4")
shader_parameter/hit_effect = 0.0
shader_parameter/shake_intensity = 5.0

[node name="World" type="Node2D"]
script = ExtResource("1_pbmss")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4fgek")
rendering_quadrant_size = 24
format = 2
layer_0/tile_data = PackedInt32Array(655366, 786432, 6, 655367, 786432, 6, 655368, 786432, 6, 655369, 786432, 6, 655370, 786432, 6, 655371, 786432, 6, 655372, 786432, 6, 655373, 786432, 6, 655365, 786432, 6, 589828, 983040, 1342177286, 655364, 851968, 1342177286, 589827, 786432, 6, 524290, 983040, 1342177286, 589826, 851968, 1342177286, 524289, 786432, 1342177285, 524288, 786432, 1342177285, 589823, 851968, 1342177286, 524287, 786432, 805306373, 458751, 786432, 805306373, 393215, 786432, 805306373, 327679, 786432, 805306373, 262143, 786432, 805306373, 393236, 786432, 5, 327700, 786432, 5, 262164, 786432, 5, 196628, 786432, 5, 131092, 786432, 5, 196607, 786432, 805306373, 131071, 786432, 805306373, 65535, 786432, 805306373, -65536, 786432, 1610612741, -65535, 786432, 1610612741, -65534, 786432, 1610612741, -65533, 786432, 1610612741, -65532, 786432, 1610612741, -65531, 786432, 1610612741, -65530, 786432, 1610612741, -65529, 786432, 1610612741, -65528, 786432, 1610612741, -65527, 786432, 1610612741, -65526, 786432, 1610612741, -65525, 786432, 1610612741, -65524, 786432, 1610612741, -65523, 786432, 1610612741, -65522, 786432, 1610612741, -65521, 786432, 1610612741, -65520, 786432, 1610612741, -65519, 786432, 1610612741, -65518, 786432, 1610612741, -65517, 786432, 1610612741, 20, 786432, 5, 65556, 786432, 5, -1, 851968, 805306374, -65516, 851968, 1610612742, 458770, 786432, 1342177285, 458771, 786432, 1342177285, 458772, 851968, 6, 327691, 786432, 1342177285, 393227, 786432, 805306374, 393228, 786432, 805306374, 327690, 917504, 1610612742, 393226, 917504, 805306374, 524303, 917504, 805306373, 458768, 983040, 1342177285, 589838, 917504, 805306373, 458769, 786432, 1342177285, 655374, 851968, 6, 589839, 851968, 6, 524304, 851968, 6, 393229, 1048576, 5, 327692, 983040, 805306373)

[node name="Packages" parent="." instance=ExtResource("3_u58kk")]
position = Vector2(240, 228)

[node name="Player" parent="." instance=ExtResource("3_40nm5")]
position = Vector2(241, 232)

[node name="SFX" type="Node2D" parent="."]
process_mode = 3

[node name="Countdown" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_58ha1")
volume_db = -15.0

[node name="GameOver" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_3gckg")
volume_db = -15.0

[node name="Witches" type="Node2D" parent="."]

[node name="WitchBlue" parent="Witches" instance=ExtResource("4_csmei")]
position = Vector2(165, 232)

[node name="WitchGreen" parent="Witches" instance=ExtResource("6_40uul")]
position = Vector2(450, 160)
witchType = 1

[node name="WitchOrange" parent="Witches" instance=ExtResource("7_msddo")]
position = Vector2(32, 184)
witchType = 3

[node name="WitchYellow" parent="Witches" instance=ExtResource("8_qykli")]
position = Vector2(276, 112)
witchType = 2

[node name="Time" type="Node" parent="."]

[node name="GameTimer" type="Timer" parent="Time"]
wait_time = 60.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartCountdown" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/StartCountdown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.341176)

[node name="CenterContainer" type="CenterContainer" parent="UI/StartCountdown/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/StartCountdown/ColorRect/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_s52vh")
text = "Start in 3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/StartCountdown"]
libraries = {
"": SubResource("AnimationLibrary_ec0ee")
}

[node name="TimedBar" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="TextureProgressBar" parent="UI/TimedBar"]
material = SubResource("ShaderMaterial_ku3c5")
layout_mode = 0
offset_top = 256.0
offset_right = 480.0
offset_bottom = 270.0
max_value = 60.0
step = 0.01
value = 60.0
fill_mode = 6
texture_under = ExtResource("4_e0yec")
texture_progress = ExtResource("5_cuadt")

[node name="Label" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_right = 28.0
offset_bottom = 23.0001
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_s52vh")
text = "Score"
horizontal_alignment = 1

[node name="EndGame" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/EndGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.52549)

[node name="CenterContainer" type="CenterContainer" parent="UI/EndGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndGame/CenterContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/EndGame/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="CurrentScore" type="Label" parent="UI/EndGame/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_s52vh")
text = "Score
$"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="UI/EndGame/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_s52vh")
text = "Highscore
$"
horizontal_alignment = 1

[node name="PlayAgain" parent="UI/EndGame/CenterContainer/VBoxContainer" instance=ExtResource("15_1d10h")]
layout_mode = 2
text = "Restart?"

[node name="BackToMainMenu" parent="UI/EndGame/CenterContainer/VBoxContainer" instance=ExtResource("15_1d10h")]
layout_mode = 2
text = "Back to Title Screen"

[node name="PauseMenu" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0

[node name="PauseBG" type="ColorRect" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.619608)

[node name="CenterContainer" type="CenterContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/PauseMenu/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="Resume" parent="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer" instance=ExtResource("15_1d10h")]
layout_mode = 2
text = "Resume"

[node name="Restart" parent="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer" instance=ExtResource("15_1d10h")]
layout_mode = 2
text = "Restart?"

[node name="BackToMainMenu" parent="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer" instance=ExtResource("15_1d10h")]
layout_mode = 2
text = "Title Screen"

[connection signal="pressed" from="UI/EndGame/CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="UI/EndGame/CenterContainer/VBoxContainer/BackToMainMenu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/PauseMenu/CenterContainer/MarginContainer/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
